typescript-fetch-upload-base64-file-demo

--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,15 @@
 <body>
 <h1>Use 'fetch' to upload</h1>
 <div>
-<input type="file" id="fileToUpload"  />
+    <div>
+        File or Image in Base64
+    </div>
+    <textarea id="textarea" rows="10"></textarea>
 </div>
 <div>
     <button id="button" type="button">Upload</button>
 </div>
 <div id="message"></div>
-<script src="./hello.ts"></script>
+<script type="module" src="./hello.ts"></script>
 </body>
 </html>
